Assistant checkpoint: Thêm /warp event/top, /money, cải thiện /item create, auction GUI
Assistant generated file changes:
- src/main/java/com/boxpvp/core/commands/WarpCommand.java: Thêm hỗ trợ /warp event và /warp top
- src/main/java/com/boxpvp/core/commands/SetWarpCommand.java: Thêm hỗ trợ /setwarp event và /setwarp top
- src/main/java/com/boxpvp/core/commands/MoneyCommand.java: Tạo lệnh /money hiển thị số tiền chính xác
- src/main/java/com/boxpvp/core/commands/ItemCommand.java: Hoàn toàn refactor ItemCommand với GUI decoration, RGB support, và weapon creation
- src/main/java/com/boxpvp/core/commands/AuctionHouseCommand.java: Cải thiện confirm GUI và thêm chức năng thu hồi item
Cải thiện confirm GUI và thêm chức năng thu hồi item
Cải thiện confirm GUI và thêm chức năng thu hồi item
- src/main/java/com/boxpvp/core/BoxPvPCore.java: Đăng ký lệnh /money
- src/main/resources/plugin.yml: Thêm lệnh /money vào plugin.yml

---

User prompt:

OK, mình muốn thêm một số lệnh nữa và cải thiện lệnh. Thêm: /warp event, top và add chúng vào setwarp, /money (show số money cụ thể đến số thập phân thứ 2) và các lệnh khác (bạn chỉ gợi ý, nếu được mình duyệt mới được thêm). Cải thiện/fixes: khi dùng /item create tool thì vẫn mở GUI và có thể tùy chỉnh item được. Nhưng có một vẫn đề là khi bấm Create thì mod vẫn tặng item kèm thông tin nhưng không có chức năng! (thêm efficiency V, mod cho cúp efficiency V nhưng tốc độ đào vẫn không có gì thay đổi), nên fix. Và thêm /item create weapon mở GUI có deco như tool. Sẽ có các icon item là Glass pane màu xám (chưa chỉnh, mặc định không có gì) là các chỉ số cho item, thêm nhiều icon tấm bảng gần cuối GUI, những tấm bảng đó sẽ gồm: "Tên vật phẩm (chỉnh màu thẳng trong đó "&"), có thể đặt tên là Item Name", "Chỉnh item show cho vũ khí (ghi item component (VD: diamond_sword, stick, blaze_rod,...) có thể đặt tên là Item Display)", "Thêm stats cho vũ khí gồm: Damage, tốc đánh, cấp độ (I-XV), phẩm chất (Common-SSR),... Các tấm bảng sẽ ở dưới các glass